--- a/.dein/dein.toml
+++ b/.dein/dein.toml
@@ -101,3 +101,15 @@ hook_add = '''
     let g:lightline = { 'colorscheme': 'nightowl' }
 '''
 
+
+# --------------------------------------------------------------
+# vim-airline
+# --------------------------------------------------------------
+[[plugins]]
+repo = 'vim-airline/vim-airline'
+[[plugins]]
+repo = 'vim-airline/vim-airline-themes'
+depends = 'vim-airline'
+hook_add = '''
+    let g:airline_theme = 'night_owl'
+'''
